Adaptations to java 18 (#47)
* Upgraded to gradle 7.6

* Extense refactor - all style objects are made immutable

* Minor adaptations for java 18 preview features

* Refactored assertion helper in order to hide its visibility

* Revert "Refactored assertion helper in order to hide its visibility"

This reverts commit 720d3b8d1b2b23ff6da8ef7005911f6a39f869f6.

* Improved docs

* Some string appends replaced with String.format

* Fix outdated documentation links

* Improved behavior when dumping test results to tmp files